# me-learning-rust

adder/: Cargo.toml
diesel_demo/: Cargo.toml  docker-compose.yaml
diesel_demo/migrations/2021-02-12-110558_create_posts/: up.sql
diesel_demo/src/: lib.rs
guess_game/: Cargo.toml
guess_game/src/: main.rs
me-with-marcros/: .gitignore  Cargo.toml
me-with-marcros/src/: main.rs
playground/: Cargo.toml
playground/src/: lib.rs  main.rs
rest-api-with-rocket/: .gitignore  Cargo.toml
rest-api-with-rocket/src/: main.rs
